variables.RunFour.scala.error
Compilation error:
RunFour:2: error: value =! is not a member of Int
while (c=!4){
        ^