variables.RunFour.scala.code
var c=0
while (c=!4){
  c=c+1
  while (isOverBaggle()==false){
    forward()
  }
}
  
